<resources>
    <string name="app_name">SafeHostel</string>


    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in">Register</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="account_verification">Account Verification</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="name_hint">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="private_text">private</string>
    <string name="public_text">public</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gold_pkg_text">Body wash\n\nInterior wipe down\n\nExterior polish\n\nInterior vacuum\n\nDashboard shine</string>
    <string name="verifcation_link">We have sent a verification link to your email address. Click the link to verify your account and proceed to login.</string>
    <string name="login">Login</string>
    <string name="not_a_member">Not a member</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="hostel">Hostel</string>
    <string name="institution">Institution</string>
    <string name="institution_hostel">Institution/Hostel</string>
    <string name="admission_no">Admission No.</string>
    <string name="phone_no">Phone No.</string>
    <string name="already_registered">Already Registered</string>
    <string name="place_holder_desc">A laptop has been stolen at quetu host...</string>
    <string name="lorem_ipsum">Lorem ipsum is placeholder text commonly used in the graphic, print,
        and publishing industries for previewing layouts and visual mockups.</string>
    <string name="_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
        in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
        occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
        est laborum.</string>

    <string name="_file_complaint_info">
        You can file a complaint about any challenge you face in your hostels or institutions and
        choose to either make it public or open for specific users also,\n\nby choice upload images to backup
        your complaint if any. Your selected admins can then look into your situation and provide you with
        a feedback.\n\nIf you are not satisfied, you can make the complaint public for everyone to view. Your
        experience can also contribute to your rating for that particular hostel helping others not go through the
        same experience.
    </string>

    <string name="admin_waiting">
        Thank you for registering as an admin. Your account will be verified and approved within 12 - 24 hours. Kindly
        check again after the specified period of time. You will be able to log in.
    </string>
    <string name="solved">Mark complaint as solved</string>

    <string-array name="array_hostels">
        <item>Select Hostel</item>
        <item>Qwetu</item>
        <item>Cuea</item>
        <item>Nazarene</item>
        <item>Our lady mary</item>
        <item>Silver</item>
        <item>Mirvins</item>
    </string-array>

    <string-array name="array_schools">
        <item>Select Institution</item>
        <item>TUK</item>
        <item>JKUAT</item>
        <item>MMUST</item>
        <item>KU</item>
        <item>MU</item>
    </string-array>
</resources>
