<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_complaints"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/complaint_profile"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_launcher_background">
                </de.hdodenhof.circleimageview.CircleImageView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/complaint_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/agaramondpro_bold"
                        android:text="Theft Qwetu" />

                    <TextView
                        android:id="@+id/complaint_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="24/june/1940"
                        android:textSize="12sp" />
                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/complaint_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/ic_image_place" />

            <TextView
                android:id="@+id/complaint_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:fontFamily="@font/agaramondpro_regular"
                android:text="@string/place_holder_desc" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/comment"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_comment_24" />

                <ImageView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_clear_24" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnPrivate"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:backgroundTint="@color/orange"
                            android:text="@string/private_text"
                            android:textColor="@android:color/white"
                            android:layout_height="match_parent"/>
                        <Button
                            android:id="@+id/btnPublic"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:text="@string/public_text"
                            android:layout_height="match_parent"/>

                    </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_comment"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/comment_text"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:hint="Comment"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/send_comment"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.1"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_chevron" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>